--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -21,12 +21,17 @@
         <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
               class="icon-bar"></span> <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-        Login Module</a>
+      <a class="navbar-brand"  th:href="@{/index}">Home</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+        <li sec:authorize="isAuthenticated()" ><a th:href="@{/doctor}">For Doctors</a></li>
+        <li sec:authorize="isAuthenticated()"  ><a th:href="@{/pharmacist}">For pharmacist</a></li>
+        <li sec:authorize="isAuthenticated()" ><a th:href="@{/patient}">For patients</a></li>
+
+        <li sec:authorize="isAuthenticated()"><a th:href="@{/doctor/create-prescription}">Add a Prescription to a patient</a></li>
+
       </ul>
     </div>
   </div>
@@ -36,7 +41,26 @@
 <br>
 <div class="container">
   <h1>Patient</h1>
-
+    <table>
+      <thead>
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Identification Number</th>
+        <th>Email</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="user : ${users}">
+        <td th:text="${user.id}"></td>
+        <td th:text="${user.firstName}"></td>
+        <td th:text="${user.lastName}"></td>
+        <td th:text="${user.identificationNumber}"></td>
+        <td th:text="${user.email}"></td>
+      </tr>
+      </tbody>
+    </table>
   <p>
     Welcome <span sec:authentication="principal.username">Patient</span>
   </p>
