--- a/src/main/resources/templates/pharmacist.html
+++ b/src/main/resources/templates/pharmacist.html
@@ -21,26 +21,52 @@
         <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
               class="icon-bar"></span> <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-        Login Module</a>
+      <a class="navbar-brand"  th:href="@{/index}">Home</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
+        <li sec:authorize="isAuthenticated()" ><a th:href="@{/doctor}">For Doctors</a></li>
+        <li sec:authorize="isAuthenticated()"  ><a th:href="@{/pharmacist}">For pharmacist</a></li>
+        <li sec:authorize="isAuthenticated()" ><a th:href="@{/patient}">For patients</a></li>
+
+        <li sec:authorize="isAuthenticated()"><a th:href="@{/doctor/create-prescription}">Add a Prescription to a patient</a></li>
+
       </ul>
     </div>
   </div>
 </nav>
-
 <br>
 <br>
 <div class="container">
   <h1>Pharmacist</h1>
+  <!--  <table>-->
+  <!--    <thead>-->
+  <!--    <tr>-->
+  <!--      <th>ID</th>-->
+  <!--      <th>First Name</th>-->
+  <!--      <th>Last Name</th>-->
+  <!--      <th>Identification Number</th>-->
+  <!--      <th>Email</th>-->
+  <!--    </tr>-->
+  <!--    </thead>-->
+  <!--    <tbody>-->
+  <!--    <tr th:each="user : ${users}">-->
+  <!--      <td th:text="${user.id}"></td>-->
+  <!--      <td th:text="${user.firstName}"></td>-->
+  <!--      <td th:text="${user.lastName}"></td>-->
+  <!--      <td th:text="${user.identificationNumber}"></td>-->
+  <!--      <td th:text="${user.email}"></td>-->
+  <!--    </tr>-->
+  <!--    </tbody>-->
+  <!--  </table>-->
+
 
   <p>
     Welcome <span sec:authentication="principal.username">Pharmacist</span>
   </p>
 </div>
+
 
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
