--- a/src/main/resources/templates/doctor.html
+++ b/src/main/resources/templates/doctor.html
@@ -72,6 +72,36 @@
     </tbody>
   </table>
 
+  <br>
+  <br>
+
+  <h2>Prescriptions of All Users</h2>
+  <table class="table">
+    <thead class="thead-dark">
+    <tr>
+      <th>ID</th>
+      <th>Date</th>
+      <th>Drug Name</th>
+      <th>User Name</th>
+      <th>Actions</th> <!-- New column for actions -->
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="prescription : ${prescriptions}">
+      <td th:text="${prescription.id}"></td>
+      <td th:text="${prescription.date}"></td>
+      <td th:text="${prescription.drug.name}"></td>
+      <td th:text="${prescription.user.firstName} + ' ' + ${prescription.user.lastName}"></td>
+      <td>
+        <!--        <a th:href="@{/pharmacist/edit/{id}(id=${prescription.id})}">Edit</a>-->
+        <a th:href="@{/pharmacist/delete/{id}(id=${prescription.id})}">Delete</a>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+
+
 </div>
 
 <div class="container">
@@ -79,7 +109,7 @@
     <div class="col-md-6 col-md-offset-3">
       <br>
       <br>
-     <label><h4 style="text-align: center; text-shadow: 1px 1px 1px blue, 2px 2px 1px blue;">
+     <label><h4 >
        Add a Drug in prescription to a patient with his Identification Number</h4>
      </label>
 <form sec:authorize="isAuthenticated()" th:action="@{/doctor}" th:object="${prescriptionDto}" method="post">
@@ -100,6 +130,45 @@
     <button type="submit" class="btn btn-primary">Create Prescription</button>
   </div>
 </form>
+
+      <br>
+      <br>
+      <h4 >
+        Add Drugs and pharmacy info.
+      </h4>
+      <form sec:authorize="isAuthenticated()" th:action="@{/doctor/drug}" th:object="${drug}" method="post">
+
+        <div class="form-group">
+          <label>Drug Name:</label>
+          <input type="text" class="form-control" th:field="*{name}" required><br>
+        </div>
+        <div class="form-group">
+          <label>Quantity:</label>
+          <input type="number" class="form-control" th:field="*{quantity}" required><br>
+        </div>
+        <div class="form-group">
+          <label>Price:</label>
+          <input type="number" step="0.01" class="form-control" th:field="*{price}" required><br>
+        </div>
+
+        <div class="form-group">
+          <label>Pharmacy Name:</label>
+          <input type="text" class="form-control" th:field="*{pharmacy.name}" required><br>
+        </div>
+        <div class="form-group">
+          <label>Pharmacy Address:</label>
+          <input type="text" class="form-control" th:field="*{pharmacy.address}" required><br>
+        </div>
+        <div class="form-group">
+          <label>Pharmacy Phone:</label>
+          <input type="text" class="form-control" th:field="*{pharmacy.phone}" required><br>
+        </div>
+
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Create Drug</button>
+        </div>
+      </form>
+
 
     </div>
   </div>
