--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,25 +16,25 @@
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand"  th:href="@{/index}">Home</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>
-                <li sec:authorize="isAuthenticated()" ><a th:href="@{/doctor}">For Doctors</a></li>
-                <li sec:authorize="isAuthenticated()"  ><a th:href="@{/pharmacist}">For pharmacist</a></li>
-                <li sec:authorize="isAuthenticated()" ><a th:href="@{/patient}">For patients</a></li>
+<!--        <div class="navbar-header">-->
+<!--            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"-->
+<!--                    aria-expanded="false" aria-controls="navbar">-->
+<!--                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span-->
+<!--                    class="icon-bar"></span> <span class="icon-bar"></span>-->
+<!--            </button>-->
+<!--            <a class="navbar-brand"  href="http://localhost:8080/index">Home</a>-->
+<!--        </div>-->
+<!--        <div id="navbar" class="collapse navbar-collapse">-->
+<!--            <ul class="nav navbar-nav">-->
+<!--                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>-->
+<!--                <li sec:authorize="isAuthenticated()" ><a th:href="@{/doctor}">For Doctors</a></li>-->
+<!--                <li sec:authorize="isAuthenticated()"  ><a th:href="@{/pharmacist}">For pharmacist</a></li>-->
+<!--                <li sec:authorize="isAuthenticated()" ><a th:href="@{/patient}">For patients</a></li>-->
 
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/doctor/create-prescription}">Add a Prescription to a patient</a></li>
+<!--                <li sec:authorize="isAuthenticated()"><a th:href="@{/doctor/create-prescription}">Add a Prescription to a patient</a></li>-->
 
-            </ul>
-        </div>
+<!--            </ul>-->
+<!--        </div>-->
     </div>
 </nav>
 
