--- a/src/main/resources/templates/pharmacist.html
+++ b/src/main/resources/templates/pharmacist.html
@@ -71,6 +71,92 @@
     </tbody>
   </table>
 
+  <br>
+  <br>
+  <br>
+  <h2>All drugs and pharmacy information</h2>
+  <table class="table">
+    <thead class="thead-dark">
+    <tr>
+      <th>ID</th>
+      <th>Drug Name</th>
+      <th>Quantity</th>
+      <th>Price</th>
+      <th>Pharmacy Name</th>
+      <th>Pharmacy Address</th>
+
+      <th>Actions</th> <!-- New column for actions -->
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="drug : ${drugs}">
+      <td th:text="${drug.id}"></td>
+      <td th:text="${drug.name}"></td>
+      <td th:text="${drug.quantity}"></td>
+      <td th:text="${drug.price}"></td>
+      <td th:text="${drug.pharmacy.name}"></td>
+      <td th:text="${drug.pharmacy.address}"></td>
+      <td>
+        <!-- Add links for editing and deleting -->
+        <!--        <a th:href="@{/doctor/drug/edit/{id}(id=${drug.id})}">Edit</a>-->
+        <!--        <a th:href="@{/doctor/drug/delete/{id}(id=${drug.id})}">Delete</a>-->
+
+        <form th:action="@{/pharmacist/drug/delete/{id}(id=${drug.id})}" method="post">
+          <input type="hidden" name="_method" value="delete" />
+          <button type="submit">Delete</button>
+        </form>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+
+
+  <br>
+  <br>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+    <h4 >
+      Add Drugs and pharmacy info.
+    </h4>
+    <form sec:authorize="isAuthenticated()" th:action="@{/pharmacist/drug}" th:object="${drug}" method="post">
+
+      <div class="form-group">
+        <label>Drug Name:</label>
+        <input type="text" class="form-control" th:field="*{name}" required><br>
+      </div>
+      <div class="form-group">
+        <label>Quantity:</label>
+        <input type="number" class="form-control" th:field="*{quantity}" required><br>
+      </div>
+      <div class="form-group">
+        <label>Price:</label>
+        <input type="number" step="0.01" class="form-control" th:field="*{price}" required><br>
+      </div>
+
+      <div class="form-group">
+        <label>Pharmacy Name:</label>
+        <input type="text" class="form-control" th:field="*{pharmacy.name}" required><br>
+      </div>
+      <div class="form-group">
+        <label>Pharmacy Address:</label>
+        <input type="text" class="form-control" th:field="*{pharmacy.address}" required><br>
+      </div>
+      <div class="form-group">
+        <label>Pharmacy Phone:</label>
+        <input type="text" class="form-control" th:field="*{pharmacy.phone}" required><br>
+      </div>
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Create Drug</button>
+      </div>
+    </form>
+    </div>
+
+  </div>
+  <br>
+  <br>
+
   <h2>Users</h2>
   <table class="table">
     <thead class="thead-dark">
@@ -80,7 +166,7 @@
       <th>Last Name</th>
       <th>Identification Number</th>
       <th>Email</th>
-<!--      <th>Actions</th> &lt;!&ndash; New column for actions &ndash;&gt;-->
+      <!--      <th>Actions</th> &lt;!&ndash; New column for actions &ndash;&gt;-->
     </tr>
     </thead>
     <tbody>
@@ -90,13 +176,14 @@
       <td th:text="${user.lastName}"></td>
       <td th:text="${user.identificationNumber}"></td>
       <td th:text="${user.email}"></td>
-<!--      <td>-->
-<!--        <a th:href="@{/pharmacist/edit/{id}(id=${user.id})}">Edit</a>-->
-<!--        <a th:href="@{/pharmacist/delete/{id}(id=${user.id})}">Delete</a>-->
-<!--      </td>-->
+      <!--      <td>-->
+      <!--        <a th:href="@{/pharmacist/edit/{id}(id=${user.id})}">Edit</a>-->
+      <!--        <a th:href="@{/pharmacist/delete/{id}(id=${user.id})}">Delete</a>-->
+      <!--      </td>-->
     </tr>
     </tbody>
   </table>
+
 </div>
 
 
