fifth commit most functionality of the project

--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -91,13 +91,23 @@
   </table>
   <br>
   <br>
+  <h1>Drug Information</h1>
+
+  <h4>Search with name to get the pharmacy and address</h4>
+  <form>
+    <input type="text" id="drugName" placeholder="Enter drug name" style="width:70%">
+    <button type="button" onclick="searchDrug()">Search</button>
+  </form>
+
+
+  <br>
   <br>
 
 <h4>please look at prescription and look at your drug and contact with pharmacy with phone and drug will be delivered</h4>
  <br>
   <br>
   <h4>all drugs with pharmacies and phones</h4>
-  <table class="table">
+  <table id="drugTable" class="table">
     <thead class="thead-dark">
     <tr>
       <th>ID</th>
@@ -106,7 +116,7 @@
       <th>Price</th>
       <th>Pharmacy Name</th>
       <th>Pharmacy Address</th>
-      <th>pharmacy phone</th>
+      <th>Pharmacy Phone</th>
     </tr>
     </thead>
     <tbody>
@@ -127,6 +137,31 @@
     Welcome <span sec:authentication="principal.username">Patient</span>
   </p>
 </div>
+<script>
+function searchDrug() {
+  // Get the drug name entered by the user
+  var drugName = document.getElementById('drugName').value;
+
+  // Get all the rows in the table
+  var table = document.getElementById('drugTable');
+  var rows = table.getElementsByTagName('tr');
+
+  // Iterate over the rows and hide/show them based on the drug name
+  for (var i = 0; i < rows.length; i++) {
+    var drugCell = rows[i].getElementsByTagName('td')[1]; // Assuming drug name is in the second column
+
+    if (drugCell) {
+      var drug = drugCell.textContent || drugCell.innerText; // Get the text content of the drug cell
+
+      if (drug.toLowerCase().includes(drugName.toLowerCase())) {
+        rows[i].style.display = ''; // Show the row
+      } else {
+        rows[i].style.display = 'none'; // Hide the row
+      }
+    }
+  }
+}
+</script>
 
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
