--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,25 +15,7 @@
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-<!--        <div class="navbar-header">-->
-<!--            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"-->
-<!--                    aria-expanded="false" aria-controls="navbar">-->
-<!--                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span-->
-<!--                    class="icon-bar"></span> <span class="icon-bar"></span>-->
-<!--            </button>-->
-<!--            <a class="navbar-brand"  th:href="@{/index}">Home</a>-->
-<!--        </div>-->
-<!--        <div id="navbar" class="collapse navbar-collapse">-->
-<!--            <ul class="nav navbar-nav">-->
-<!--                <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></li>-->
-<!--                <li sec:authorize="isAuthenticated()" ><a th:href="@{/doctor}">For Doctors</a></li>-->
-<!--                <li sec:authorize="isAuthenticated()"  ><a th:href="@{/pharmacist}">For pharmacist</a></li>-->
-<!--                <li sec:authorize="isAuthenticated()" ><a th:href="@{/patient}">For patients</a></li>-->
 
-<!--                <li sec:authorize="isAuthenticated()"><a th:href="@{/doctor/create-prescription}">Add a Prescription to a patient</a></li>-->
-
-<!--            </ul>-->
-<!--        </div>-->
     </div>
 </nav>
 
@@ -83,7 +65,8 @@
      <div class="form-group"
       th:classappend="${#fields.hasErrors('confirmEmail')}? 'has-error':''">
       <label for="confirmEmail" class="control-label">Confirm
-       e-mail</label> <input id="confirmEmail" class="form-control"
+       e-mail</label>
+         <input id="confirmEmail" class="form-control"
        th:field="*{confirmEmail}" />
       <p class="error-message"
        th:each="error : ${#fields.errors('confirmEmail')}"
